...
                textAlign = TextAlign.Center,
            )

            Spacer(modifier = Modifier.height(4.dp))

            Text(
                text = "Create a free account",
                style = typography.bodyLarge,
                color = colorScheme.onBackground
            )

            Spacer(modifier = Modifier.height(8.dp))

...
            OutlinedTextField(
                value = username,
                onValueChange = {
                    username = it
                    errUsername = false
                },
                label = { Text("Username", style = typography.labelLarge) },
                leadingIcon = {
                    Icon(
                        imageVector = Icons.Filled.Person,
                        contentDescription = "Username field input icon",
                        modifier = Modifier.size(24.dp)
                    )
...
            OutlinedTextField(
                value = email,
                onValueChange = {
                    email = it.trim().lowercase()
                    errEmail = false
                }, //ensures it isn't case sensitive
                label = { Text("Email", style = typography.labelLarge) },
                leadingIcon = {
                    Icon(
                        imageVector = Icons.Filled.Email,
                        contentDescription = "Email input field icon",
                        modifier = Modifier.size(24.dp)
                    )
...
                            isLoading = false
                        }
                    }
                },
                enabled = !isLoading
            ) {
                Text(if (isLoading) "Signing up" else "Sign up", style = typography.labelLarge)
            }

            Spacer(modifier = Modifier.height(32.dp))

            // This creates a row that implies our sign in text button to take you to the login page
            Row(
...
                Text(
                    text = "Already on GetGrinnected?",
                    style = typography.bodyMedium,
                    color = colorScheme.onBackground
                )
                TextButton(onClick = { navController.navigate("login") }) {
                    Text(text = "Sign in",
                        style = typography.labelLarge,
                        modifier = modifier.semantics { contentDescription = "Log in to your account" })
                }
            }

            Spacer(modifier = Modifier.height(200.dp))
...
 * Validates an email ends in @grinnell.edu
 * @param email takes in a String representation of an email
 * @return null which basically means it ends in @grinnell.edu otherwise
 * it returns a string associated with the error it isn't meeting.
 */
fun validateEmail(email: String): String? {
    if (!email.endsWith("@grinnell.edu")) return "Email must end with @grinnell.edu"
    return null
}

@Preview(showBackground = true)
@Composable
fun SignupScreenPreview(){
...
 */
fun validateUsername(username: String): String? {
    // Set of allowed characters Alphabetical, Numeric and periods and underscores
    val allowedChars = Regex("^[a-zA-Z0-9._]+$")
    // If the username contains characters that aren't allowed we display the following error
    if (!allowedChars.matches(username)) {
        return "Username can only include letters, numbers, '.', and '_'"
    }
    // Set of letters
    val letters = Regex("[a-zA-Z]")
    // If the username does not contain at least one letter display the following error
    if (!letters.containsMatchIn(username)) {
        return "Username must contain at least one letter"
...
