...
                    }

                    Spacer(modifier = modifier.height(8.dp))

                    // Appearance Section
                    // Setup a row to have the wording for the dark mode switch inline with the switch
                    SettingsSection(title = "Appearance") {
                        Row(
                            verticalAlignment = Alignment.CenterVertically,
                            modifier = Modifier.fillMaxWidth()
                        ) {
                            Text(
                                text = if (darkTheme) "Switch to light mode" else "Switch to dark mode",
                                style = typography.bodyLarge
                            )
                            Spacer(modifier = Modifier.weight(1f))
                            // Switch to toggle dark or light mode
                            Switch(
                                checked = darkTheme,
...
                        }
                    }

                    Spacer(modifier = modifier.height(8.dp))

                    // Accessibility Section
                    SettingsSection(title = "Accessibility") {
                        Row(
                            modifier = Modifier.fillMaxWidth(),
                            verticalAlignment = Alignment.CenterVertically
                        ) {
                            Text("Font Size:", style = typography.bodyLarge)
                            Spacer(modifier = Modifier.weight(1f))
...
